--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/api/whois/:path*",
-      "destination": "https://whois.freeaiapi.xyz/:path*"
-    }
+    { "source": "/api/whois/:path*", "destination": "https://whois.freeaiapi.xyz/:path*" },
+    { "source": "/(.*)", "destination": "/$1" }
   ]
 }
-
